# light-engine

./: .dockerignore  .gitignore  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE.md  README.md  docker-compose.debug.yml  mod.rs  pyproject.toml  requirements.txt  simple_box.wgsl
.devcontainer/: devcontainer.json
.github/: chat1.txt  dependabot
.github/workflows/: CI.yml  ci.yml  continuous_integration.yml  greetings.yml  rust.yml
0_ordinem/: ORDINEM_STRUCTURE.md  README.md  mod.rs
10_training_data/: README.md
1_matter/: README.md  mod.rs
1_matter/particle/: particles.rs
2_causality/: README.md  mod.rs
2_interactions/: mod.rs
3_kits/: mod.rs
4_lab/: README.md  mod.rs
5_src/: README.md
7_Beam/: README.md
_docs/docs/build_pipelines/: pre_alpha.md
_docs/docs/dev/: formulation_notes.txt  general_stack.txt  setting_env.txt
aria/: README.md
beam/: README.md
dari/: README.md
docs/: INSTALL.md
docs/build_pipelines/: pre_alpha.md
docs/dev/: setting_env.txt
docs/dev/pipeline/: alpha.README
docs/docs/dev/: stuff.txt
documentation/dev/: techstack.txt
examples/: simple_box_render.rs
kits/: README.md
kits/docs/dev/: general_stack.txt  setting_env.txt  techstack.txt
lab/: mod.rs
lab/potter/: README.md
src/: README.md  build.ninja  lib.rs  main  main.rs  mod.rs
src/0_ordinem/: mod.rs
src/0_ordinem/classical/: electromagnetism.rs  mod.rs
src/0_ordinem/laws/classical/: electromagnetism.rs  friction.rs  gravity.rs  (+5 more)
src/0_ordinem/lib/: constants.rs  types.rs  typesafes.rs
src/0_ordinem/statics/: constants.rs  integrator.rs  mod.rs
src/1_matter/: README.md  mod.rs
src/1_matter/particle/: core.rs
src/2_causality/: README.md
src/aria/: README.md
src/causality/: mod.rs
src/causality/solvers/: contact_dynamics.rs  mod.rs  simple_gravity.rs
src/dara_ai/: README.md
src/dara_ai/training_data/: README.md
src/engine/: clock.rs  config.rs  mod.rs  tick.rs
src/kits/: mod.rs
src/lab/: README.md
src/lab/potter/: README.md
src/manifest/: mod.rs
src/manifest/acoustics/: generator.rs  mod.rs  output.rs  spacial.rs
src/manifest/render/: backend.rs  lamp.rs  material.rs  mod.rs  observer.rs  photon_renderer.rs  surface.rs  vulkan.rs  wgpu.rs
src/matter/: mod.rs
src/matter/elements/: iron.rs  mod.rs
src/matter/material/: material.rs
src/matter/particle/: core.rs
src/ordinem/: ORDINEM_STRUCTURE.md  mod.rs
src/ordinem/laws/: mod.rs
src/ordinem/statics/: constants.rs  mod.rs  precomputed.rs  registry.rs  typesafes.rs
src/python_bridge/: mod.rs
tests/: first_test.rs  photon_render_test.rs
(+18 files in other folders)
