[package]
name = "light_engine" # The name of the package or project.
version = "0.1.0" # The current version of the package.
edition = "2024" # Specifies the Rust edition being used (e.g., 2024 edition).

[dependencies] # A section to list the package dependencies.
ash = "0.37"
wgpu = "0.19"
winit = "0.29"         # Cross-platform window creation/event loop
raw-window-handle = "0.6" # For surface creation with ash/wgpu
log = "0.4"            # Logging facade
env_logger = "0.11"    # Logging implementation

[build-dependencies] # Dependencies required only during the build process, such as tools for code generation, compiling native components, or other build-time tasks.
cmake = "0.1.49" # provides rust ability to natively comiple and build C/C++ native libraries and components. will build natively across windows, macos, linux