[tool.poetry]
name = "light-engine"
version = "0.1.0"
description = "A description of your project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/leoncscott543/light-engine"
repository = "https://github.com/leoncscott543/light-engine"
keywords = ["graphics", "light-engine",  "simulation", "game-engine"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

